syntax = "proto3";

option csharp_namespace = "TurboKart.Presentation.Console.LapTimerSimulation";

package laptime;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// The greeting service definition.
service LapTimer {
  // Sends a greeting
  rpc CartCrossed (CartCrossedRequest) returns (google.protobuf.Empty);
}

// The request message containing the user's name.
message CartCrossedRequest {
  string KartNo = 1;
  int32 Lap = 2;
  string LapTime = 3;
  string TotalTime = 4;
}


